# Animazing

./: README.md  all.js  project.nix  reflex-stone.cabal
src/: Main.hs  SvgAnimation.hs  Util.hs  ValueSVG.hs
